[project]
name = "cfat"
description = "Computation of Feasible Applied Torques (CFAT) (Python package)"
version = "0.1.0"
authors = [
    { name = "Florian Fischer", email = "florian.j.fischer@uni-bayreuth.de" },
    { name = "Markus Klar", email = "markus.klar@uni-bayreuth.de" }
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "mujoco-py<2.2,>=2.1",
]

[project.optional-dependencies]
mujoco_py = ["mujoco-py<2.2,>=2.1"]
mujoco = ["mujoco>=2.2"]

[build-system]
requires = ["setuptools>=61.0"]

[tool.setuptools.package-data]
mypkg = ["**"]
